--- a/sample-www/index.html
+++ b/sample-www/index.html
@@ -14,6 +14,9 @@ body {
     <p>Serving this from our very own web server!</p>
     
     If the MIME type is set up correctly, you should be able to see an image below as well:<br />
-    <img src="cat.jpg" width="480px" alt="Cat">
+    <img src="cat.jpg" width="120px" alt="Cat">
+    <img src="cat2.jpg" width="120px" alt="Cat2">
+    <img src="cat3.jpg" width="120px" alt="Cat3">
+    <img src="cat4.jpg" width="120px" alt="Cat4">
 </body>
 </html>
